src/snapshot/tests/snapshots/apply__add_property.snap
---
source: src/snapshot/tests/apply.rs
expression: tree_view
---
id: id-1
name: ROOT
class_name: ROOT
properties:
  Foo:
    Type: String
    Value: Value of Foo
metadata:
  ignore_unknown_instances: false
  relevant_paths: []
  context:
    path_ignore_glob: []
children: []
