src/snapshot/tests/snapshots/apply__remove_property_after_patch.snap
---
source: src/snapshot/tests/apply.rs
expression: tree_view
---
id: id-1
name: ROOT
class_name: ROOT
properties: {}
metadata:
  ignore_unknown_instances: false
  relevant_paths: []
  context:
    path_ignore_glob: []
children: []
