src/snapshot/tests/snapshots/apply__remove_property_initial.snap
---
source: src/snapshot/tests/apply.rs
expression: tree_view
---
id: id-1
name: ROOT
class_name: ROOT
properties:
  Foo:
    Type: String
    Value: Should be removed
metadata:
  ignore_unknown_instances: false
  relevant_paths: []
  context:
    ignore_paths: []
children: []
