src/snapshot/tests/snapshots/apply__set_name_and_class_name.snap
---
source: src/snapshot/tests/apply.rs
expression: tree_value
---
id: id-1
name: "Hello, world!"
class_name: Folder
properties: {}
metadata:
  ignore_unknown_instances: false
  source_path: ~
  project_node: ~
children: []
